[gd_scene load_steps=7 format=2]

[ext_resource path="res://Recursos/Botões/Frame 2.png" type="Texture" id=1]
[ext_resource path="res://Recursos/Sprites/NPCs/HomemBrancoHidden.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Scripts das Interfaces/EscolhaAvatar.gd" type="Script" id=4]
[ext_resource path="res://Recursos/Botões/Frame 4.png" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Recursos/Fontes/Kenney Future Narrow.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = SubResource( 1 )

[node name="EscolhaAvatar" type="Node2D"]
script = ExtResource( 4 )

[node name="RichTextLabel" type="Label" parent="."]
margin_left = 346.0
margin_top = 191.0
margin_right = 953.0
margin_bottom = 262.0
custom_fonts/font = SubResource( 2 )
text = "ESCOLHA SEU CONSELHEIRO"
align = 1
valign = 1

[node name="Fundo" type="TextureRect" parent="."]
margin_left = 254.0
margin_top = 323.0
margin_right = 1057.0
margin_bottom = 562.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Escolha" type="TextureButton" parent="."]
margin_left = 881.0
margin_top = 335.0
margin_right = 1018.0
margin_bottom = 551.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 308.0
margin_top = 354.0
margin_right = 1688.0
margin_bottom = 695.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Conselheiro1" type="TextureRect" parent="HBoxContainer"]
margin_right = 195.0
margin_bottom = 341.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Conselheiro2" type="TextureRect" parent="HBoxContainer"]
margin_left = 395.0
margin_right = 590.0
margin_bottom = 341.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Conselheiro3" type="TextureRect" parent="HBoxContainer"]
margin_left = 790.0
margin_right = 985.0
margin_bottom = 341.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Conselheiro4" type="TextureRect" parent="HBoxContainer"]
margin_left = 1185.0
margin_right = 1380.0
margin_bottom = 341.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Escolha" to="." method="_on_Escolha_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/Conselheiro1" to="." method="_on_Conselheiro1_mouse_entered"]
[connection signal="mouse_entered" from="HBoxContainer/Conselheiro2" to="." method="_on_Conselheiro2_mouse_entered"]
[connection signal="mouse_entered" from="HBoxContainer/Conselheiro3" to="." method="_on_Conselheiro3_mouse_entered"]
[connection signal="mouse_entered" from="HBoxContainer/Conselheiro4" to="." method="_on_Conselheiro4_mouse_entered"]
